--- a/hexo/_config.yml
+++ b/hexo/_config.yml
@@ -3,12 +3,12 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
-subtitle:
-description:
-author: John Doe
-language:
-timezone:
+title: 80xer's note
+subtitle: 일기, 일지, 저장소, 노트
+description: 살아가면서 기억해야할 것들
+author: 80xer
+language: korean
+timezone: UTC/GMT +9
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
