--- a/hexo/_config.yml
+++ b/hexo/_config.yml
@@ -3,7 +3,7 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: 80xer's note
+title: 80xer's log
 subtitle: 일기, 일지, 저장소, 노트
 description: 살아가면서 기억해야할 것들
 author: 80xer
