--- a/hexo/_config.yml
+++ b/hexo/_config.yml
@@ -11,7 +11,7 @@ language: korean
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://yoursite.com
+url: http://log-80xer.rhcloud.com/
 root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
