add deploy github in config.yml

--- a/hexo/_config.yml
+++ b/hexo/_config.yml
@@ -67,4 +67,6 @@ theme: landscape
 # Deployment
 ## Docs: http://hexo.io/docs/deployment.html
 deploy:
-  type:
+  type: github
+  repo: git@github.com:80xer/hexoblog.git
+  branch: gh-pages
