--- a/hexo/_config.yml
+++ b/hexo/_config.yml
@@ -11,7 +11,7 @@ language: korean
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://www.80xer.com/
+url: http://blog.80xer.com/
 root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
@@ -68,5 +68,5 @@ theme: landscape
 ## Docs: http://hexo.io/docs/deployment.html
 deploy:
   type: git
-  repo: git@github.com:80xer/80xer.github.com.git
-  branch: master
+  repo: git@github.com:80xer/blog.git
+  branch: gh-pages
