change title of blog and title git post

--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: 80xer's log
-subtitle: 일기, 일지, 저장소, 노트
-description: 살아가면서 기억해야할 것들
+title: I'm not lazy. i just really enjoy doing nothing
+subtitle: i'm lazy and i know it
+description: i'm too lazy to stop being lazy
 author: 80xer
 language: korean
 
